[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "eprint"
version = "0.0.1760854907"
description = "print() wrapper that writes to sys.stderr"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = []
requires-python = ">=3.11"
keywords = ["stderr", "print", "logging", "debug"]

[project.license]
text = "ISC"

[project.urls]
Homepage = "https://github.com/jakeogh/eprint"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
eprint = [
    "py.typed",
]
