[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "eprint"
version = "0.0.1760909962"
description = "print() wrapper that writes to sys.stderr"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = []
license = "ISC"
requires-python = ">=3.11"
keywords = ["stderr", "print", "logging", "debug"]

[project.urls]
Homepage = "https://github.com/jakeogh/eprint"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
eprint = [
    "py.typed",
]
