[build-system]
requires = ["setuptools>=61.0", "tomlkit"]
build-backend = "pep508_url_version_backend"
backend-path = ["."]

[project]
name = "eprint"
version = "0.0.1761023185"
description = "print() wrapper that writes to sys.stderr"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = []
license = "ISC"
requires-python = ">=3.11"
keywords = ["stderr", "print", "logging", "debug"]

[project.urls]
Homepage = "https://github.com/jakeogh/eprint"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
eprint = [
    "py.typed",
]

# Configuration for our custom backend
[tool.pep508-url-version-backend]
# Fast path - used when custom index is configured
# Hook should update these version numbers when dependencies change
dependencies-indexed = [
    "eprint>=0.0.1760909962",
]

# Slow fallback - used when custom index is NOT configured
# Hook should keep these URLs up to date
dependencies-git = [
    "eprint @ git+https://git@github.com/jakeogh/eprint",
]

# Optional: Custom markers to detect if index is configured
# If any of these strings appear in PIP_INDEX_URL or PIP_EXTRA_INDEX_URL,
# we'll use the fast path
index-urls = [
    "jakeogh.github.io",
    "myapps-index",
]
